tests/bad/recursive_struct.glaz
struct RecursivePtr {
	a: *RecursivePtr // OK
}

struct RecursiveRef {
	a: ?&RecursiveRef // OK
}

struct Recursive {
	a: Recursive // FAIL
}

fn main() {}
